invalid use of incomplete type class MacroAssembler when building minimal after JDK-8191278

XMLWordPrintable

    • b04
    • Not verified

        minimal build fails after JDK-8191278.

        $ make images CONF=linux-x86_64-minimal-release
        Building target 'images' in configuration 'linux-x86_64-minimal-release'
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp: In constructor 'UnsafeCopyMemoryMark::UnsafeCopyMemoryMark(StubCodeGenerator*, bool, bool, address)':
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp:610:67: error: invalid use of incomplete type 'class MacroAssembler'
             _ucm_entry = UnsafeCopyMemory::add_to_table(_cgen->assembler()->pc(), NULL, err_exit_pc);
                                                                           ^
        In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
                         from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
                         from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
                         from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
        /home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
         class MacroAssembler;
               ^
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp: In destructor 'UnsafeCopyMemoryMark::~UnsafeCopyMemoryMark()':
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp:616:46: error: invalid use of incomplete type 'class MacroAssembler'
             _ucm_entry->set_end_pc(_cgen->assembler()->pc());
                                                      ^
        In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
                         from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
                         from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
                         from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
        /home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
         class MacroAssembler;
               ^
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp:618:55: error: invalid use of incomplete type 'class MacroAssembler'
               _ucm_entry->set_error_exit_pc(_cgen->assembler()->pc());
                                                               ^
        In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
                         from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
                         from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
                         from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
        /home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
         class MacroAssembler;
               ^
        At global scope:
        cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
        cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
        gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-minimal-release/hotspot/variant-minimal/libjvm/objs/stubRoutines.o] Error 1
        gmake[3]: *** Waiting for unfinished jobs....
        gmake[2]: *** [hotspot-minimal-libs] Error 1

        ERROR: Build failed for target 'images' in configuration 'linux-x86_64-minimal-release' (exit code 2)

        === Output from failing command(s) repeated here ===
        * For target hotspot_variant-minimal_libjvm_objs_stubRoutines.o:
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp: In constructor 'UnsafeCopyMemoryMark::UnsafeCopyMemoryMark(StubCodeGenerator*, bool, bool, address)':
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp:610:67: error: invalid use of incomplete type 'class MacroAssembler'
             _ucm_entry = UnsafeCopyMemory::add_to_table(_cgen->assembler()->pc(), NULL, err_exit_pc);
                                                                           ^
        In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
                         from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
                         from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
                         from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
        /home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
         class MacroAssembler;
               ^
        /home/aoqi/jdk/src/hotspot/share/runtime/stubRoutines.cpp: In destructor 'UnsafeCopyMemoryMark::~UnsafeCopyMemoryMark()':
           ... (rest of output omitted)

        * All command lines available in /home/aoqi/jdk/build/linux-x86_64-minimal-release/make-support/failure-logs.
        === End of repeated output ===

        No indication of failed target found.
        Hint: Try searching the build log for '] Error'.
        Hint: See doc/building.html#troubleshooting for assistance.

        make[1]: *** [main] Error 1
        make: *** [images] Error 2

              Assignee:
              Qi Ao
              Reporter:
              Qi Ao
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: