8226871: invalid use of incomplete type class MacroAssembler when building minimal after JDK-8191278

Reviewed-by: shade